// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default Button 1`] = `
<button
  className="btn border default"
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Button Extra Small Button 1`] = `
<button
  className="btn border xs"
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Button Large Button 1`] = `
<button
  className="btn border xl"
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Button Primary Button 1`] = `
<button
  className="btn bg-primary-500 hover:bg-primary-400 text-primary-complementary default"
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Button Secondary Button 1`] = `
<button
  className="btn bg-secondary-500 hover:bg-secondary-400  text-secondary-complementary default"
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Button Small Button 1`] = `
<button
  className="btn border sm"
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Card Empty 1`] = `
<div
  className="border-4 p-1 rounded-xl hover:shadow bg-gray-500 w-32 h-32"
/>
`;

exports[`Storyshots Card With Children 1`] = `
<div
  className="border-4 p-1 rounded-xl hover:shadow w-32 h-32"
>
  <div>
    First
  </div>
  <div>
    Second
  </div>
  <div>
    Third
  </div>
</div>
`;

exports[`Storyshots TopBar Empty 1`] = `
<div
  className="top-bar"
/>
`;

exports[`Storyshots TopBar Primary 1`] = `
<div
  className="top-bar bg-primary-500 text-primary-complementary"
>
  Some content
</div>
`;

exports[`Storyshots TopBar Secondary 1`] = `
<div
  className="top-bar bg-secondary-500 text-secondary-complementary"
>
  <div>
    One 
  </div>
  <div>
    Two
  </div>
  <div>
    Three
  </div>
</div>
`;

exports[`Storyshots TopBar With Children 1`] = `
<div
  className="top-bar"
>
  Some content
</div>
`;
